--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Secret Diary</string>
+    <string name="save">Save</string>
+    <string name="write_your_note">Write your note</string>
 </resources>
