--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Secret Diary</string>
     <string name="save">Save</string>
     <string name="write_your_note">Write your note</string>
+    <string name="undo">Undo</string>
 </resources>
